# daphne-x86_64

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh  building.md  contributing.md  license  limine.cfg  linker.ld  packages.yml  phiOS.sh  readme.md
kernel/: CMakeLists.txt  bitmap.c  build.sh  io.h  kernel.c  kernel.h  kmain.c  kmain.h  linker.ld  logk.c  logk.h  malloc.h  multiboot.h  mutex.c  mutex.h  panic.c  panic.h  pci.h  process.c  process.h  readme.md  sched.h  space.c  space.h
kernel/arch/: CMakeLists.txt
kernel/arch/x86_32/: CMakeLists.txt  gdt.asm  gdt.c  gdt.h  mm.c  mm.h  readme.md  ring3.asm  tss.c  tss.h  tty_io.h  usermode.c  vmm.c  vmm.h
kernel/arch/x86_32/boot/: CMakeLists.txt  boot.asm  gdt.asm  paging.asm
kernel/arch/x86_32/idt/: idt.c  idt.h  irq.asm  irq.c
kernel/arch/x86_64/: CMakeLists.txt  boot.asm  context.c  context.h  cpu.c  cpu.h  gdt.asm  gdt.c  gdt.h  pmm.c  pmm.h  ring3.asm  sched.asm  tss.asm  tss.c  tss.h  vmm.c  vmm.h  x64.h
kernel/arch/x86_64/boot/: Makefile  bootx64.c
kernel/arch/x86_64/idt/: CMakeLists.txt  PIC.c  PIC.h  idt.c  idt.h  irq.asm  irq.c
kernel/arch/x86_64/tulip/: Makefile  bootx64.c  elf.c  elf.h  readme.md
kernel/boot/: boot.s  gdt.s  paging.s
kernel/dev/: CMakeLists.txt  dev.c  dev.h  kbd.c  pcspk.c  pcspk.h  pit.c  pit.h
kernel/dev/ahci/: CMakeLists.txt  ahci.c  ahci.h
kernel/dev/fb/: CMakeLists.txt  lfb.h
kernel/dev/kbd/: CMakeLists.txt  kbd.h
kernel/dev/pcspk/: CMakeLists.txt  pcspk.h
kernel/dev/pit/: CMakeLists.txt  pit.h
kernel/drivers/: CMakeLists.txt  driver.c  driver.h
kernel/drivers/PIT/: PIT.c  PIT.h  sleep.c  sleep.h
kernel/drivers/keyboard/: CMakeLists.txt  keyboard.c  keyboard.h
kernel/drivers/pci/: CMakeLists.txt  pci.c  pci.h
kernel/drivers/sound/: CMakeLists.txt  pcspk.h
kernel/drivers/sound/pcspk/: CMakeLists.txt  pcspk.c
kernel/drivers/sound/speaker/: speaker.c  speaker.h
kernel/drivers/time/: CMakeLists.txt  PIT.c  PIT.h  sleep.c  sleep.h
kernel/forbia/: CMakeLists.txt  kernel.h  lock.c  lock.h  panic.c  panic.h  types.h
kernel/idt/: CMakeLists.txt  PIC.c  PIC.h  idt.c  idt.h  irq.c  irq.s
kernel/io/: CMakeLists.txt  io.c  io.h
kernel/kmain/: CMakeLists.txt  kmain.c  kmain.h
kernel/lib/: CMakeLists.txt  printk.c  printk.h  sleep.c  sleep.h  stdlib.h  vec.h
kernel/libk/: CMakeLists.txt  malloc.c  malloc.h  printk.c  printk.h  sleep.c  sleep.h  stdlib.c  stdlib.h  string.c  string.h
kernel/logger/: CMakeLists.txt  logk.c  logk.h  panic.c  panic.h
kernel/malloc/: CMakeLists.txt  malloc.c  malloc.h
kernel/mem/: CMakeLists.txt  bitmap.h  malloc.c  malloc.h  mem.c  mem.h
kernel/memory/: CMakeLists.txt  alloc.c  alloc.h  bitmap.c  bitmap.h  context.c  context.h  malloc.c  malloc.h  mem.h  mm.c  mm.h  paging.c  paging.h  space.c  space.h  watermark.c  watermark.h  wm.c
kernel/memory/heap/: CMakeLists.txt  frame_tree.c  frame_tree.h  kmalloc.c  kmalloc.h  palloc.c  palloc.h
kernel/memory/init_module/: init_module.c  init_module.h
kernel/memory/lmmap/: lmmap.c  lmmap.h
kernel/memory/paging/: CMakeLists.txt  paging.c  paging.h
kernel/mod/: CMakeLists.txt  dev.h
kernel/mod/ahci/: CMakeLists.txt  ahci.c  ahci.h
kernel/mod/fb/: CMakeLists.txt  lfb.h
kernel/mod/kbd/: CMakeLists.txt  kbd.c  kbd.h
kernel/mod/pci/: CMakeLists.txt  pci.c  pci.h
kernel/mod/pcspk/: CMakeLists.txt  pcspk.h
kernel/mod/pit/: CMakeLists.txt  pit.c  pit.h
kernel/mod/tm/: CMakeLists.txt  pit.c  pit.h  tm.c  tm.h
kernel/modules/: module.c  module.h
kernel/modules/keyboard/: keyboard.c  keyboard.h
kernel/modules/sound/speaker/: speaker.c  speaker.h
kernel/modules/time/: PIT.c  PIT.h  sleep.c  sleep.h
kernel/pci/: CMakeLists.txt  pci.c  pci.h
kernel/proc/: CMakeLists.txt  process.c  process.h  sched.c  sched.h
kernel/sched/: CMakeLists.txt  process.c  process.h  sched.c  sched.h  task.c  task.h
kernel/shrimp/: CMakeLists.txt  font.c  font.h  shrimp.c  shrimp.h  shrimp_font.c
kernel/tests/: CMakeLists.txt  malloc_test.c  malloc_test.h  tests.c  tests.h
kernel/tty/: CMakeLists.txt  printk.c  printk.h  tty_io.c  tty_io.h  vga.h
kernel/vid/: CMakeLists.txt  lfb.c  lfb.h  vid.c  vid.h
kernel/vid/console/: CMakeLists.txt  con.c  con.h  font.h
src/kernel/arch/x86_64/: CMakeLists.txt  acpi.c  acpi.h  apic.c  apic.h  cmos.c  cmos.h  context.c  context.h  cpu.c  cpu.h  debug.c  debug.h  gdt.c  gdt.h  irq.c  irq.h  linker.ld  madt.c  madt.h  pic.c  pic.h  pmm.c  pmm.h  ports.c  smp.asm  smp.c  smp.h  tsc.c  tsc.h  user.asm  user.c  user.h  vmm.c  vmm.h  x64.h
src/kernel/generic/: CMakeLists.txt
src/kernel/generic/binfmt/: CMakeLists.txt  binfmt.c  binfmt.h
src/kernel/generic/forbia/: CMakeLists.txt  assert.h  errno.h  kernel.c  kernel.h  lock.h  panic.c  panic.h  types.h
src/kernel/generic/fs/: CMakeLists.txt  vfs.c  vfs.h
src/kernel/generic/io/: CMakeLists.txt  io.c  io.h
src/kernel/generic/malloc/: CMakeLists.txt  malloc.c  malloc.h  mmu.c  mmu.h  object.h
src/kernel/generic/memory/: CMakeLists.txt  bitmap.c  bitmap.h  context.c  context.h  mem.c  mem.h  space.c  space.h
src/kernel/generic/sched/: CMakeLists.txt  exec.c  exec.h  sched.c  sched.h  task.c  task.h
src/kernel/generic/shrimp/: CMakeLists.txt  font.c  font.h  shrimp.c  shrimp.h
src/kernel/generic/time/: CMakeLists.txt  clock.c  clock.h  jiffies.c  jiffies.h  persistent_time.h  sleep.c  sleep.h  time.c  time.h  time_func_node.h  time_source.c  time_source.h  tm.h
src/kernel/lib/: CMakeLists.txt  README.md  elf.c  elf.h  hashmap.c  hashmap.h  list.c  list.h  lock.c  lock.h  log.h  panic.c  panic.h  printk.c  printk.h  sleep.c  sleep.h  stdlib.c  stdlib.h  string.c  string.h  tar.c  tar.h  tree.c  tree.h  vec.c  vec.h
src/kernel/lib/tinf/: CMakeLists.txt  tinflate.c
src/kernel/modules/: CMakeLists.txt  ramdisk.c  ramdisk.h
src/kernel/modules/apic/: CMakeLists.txt  apic.c
src/kernel/modules/fb/: CMakeLists.txt  lfb.c  lfb.h
src/kernel/modules/kbd/: CMakeLists.txt  kbd.c
src/kernel/modules/pci/: CMakeLists.txt  pci.c  pci.h
(+82 files in other folders)
